vpc/Internet_gw.tf
resource "aws_internet_gateway" "Internet-gw" {
  vpc_id = aws_vpc.vpc-04a7a3a1cb5b9d528.id
}

resource "aws_instance" "foo" {
  # ... other arguments ...

  depends_on = [aws_internet_gateway.Internet-gw]
}
